[tool.poetry]
name = "gnlp"
version = "0.1.0"
description = "General Natural Language Processing (GNLP) framework to boost building NLP products"
authors = ["Gabir Yousef <gabiryousef@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
